# security_selinux_adapter

./: BUILD.gn  OAT.xml  README.en.md  README.md  README.txt  ohos.build
interfaces/policycoreutils/include/: policycoreutils.h
interfaces/policycoreutils/src/: load_policy.c  restorecon.c
interfaces/tools/load_policy/: load_policy.c
interfaces/tools/restorecon/: restorecon.c
scripts/: build_contexts.py  build_policy.py  build_policy.sh
sepolicy/: config  policy.31  push_demo.bat  push_demo_abcd.bat  rmabcd.sh
sepolicy/base/public/: attributes  device.te  domain.te  glb_te_def.spt
sepolicy/base/system/: access_vectors  file.te  file_contexts  initial_sid_contexts  initial_sids  security_classes  virtfs_contexts
sepolicy/ohos_policy/appexecfwk/appexecfwk/system/: foundation.te
sepolicy/ohos_policy/distributedschedule/samgr/system/: samgr.te
sepolicy/ohos_policy/drivers/adapter/system/: hdf_devmgr.te
sepolicy/ohos_policy/graphic/graphic/system/: graphic.te
sepolicy/ohos_policy/hiviewdfx/hiview/system/: hiview.te
sepolicy/ohos_policy/kanto/public/: kanto.te
sepolicy/ohos_policy/kanto/system/: file_contexts  init.te  kanto.te
sepolicy/ohos_policy/kernel/linux/system/: kernel.te  shell.te
sepolicy/ohos_policy/mosquitto/public/: mosquitto.te
sepolicy/ohos_policy/mosquitto/system/: file_contexts  init.te  mosquitto.te
sepolicy/ohos_policy/multimodalinput/input/system/: udevadm.te
sepolicy/ohos_policy/security/deviceauth/system/: deviceauth.te
sepolicy/ohos_policy/startup/appspawn/system/: appspawn.te
sepolicy/ohos_policy/startup/init/public/: init.te
sepolicy/ohos_policy/startup/init/system/: init.te  ueventd.te
test/: README.txt  selinux_test.c  selinux_test_helper.sh  selinux_test_helper_push.bat
