SELINUX_ROOT_DIR = "//base/security/selinux"

ohos_executable("selinux_test") {
  install_enable = true
  sources = [ "$SELINUX_ROOT_DIR/test/selinux_test.c" ]
  cflags = [
    "-D_GNU_SOURCE",
    "-DUSE_PCRE2",
    "-w",
  ]
  deps = [
    "//third_party/pcre2:libpcre2",
    "//third_party/selinux:libselinux",
  ]
  part_name = "selinux"
  subsystem_name = "security"
}

action("build_policy") {
  script = "scripts/build_policy.sh"
  deps = [
    "//third_party/selinux:checkpolicy($host_toolchain)",
    "//third_party/selinux:secilc($host_toolchain)",
  ]
  outputs = [ "$root_out_dir/" ]
}

ohos_prebuilt_etc("build_sepolicy") {
  deps = [ ":build_policy" ]
  source = "$SELINUX_ROOT_DIR/sepolicy/policy.31"
  part_name = "selinux"
  relative_install_dir = "selinux/targeted/policy/"
}

ohos_prebuilt_etc("config") {
  source = "$SELINUX_ROOT_DIR/config/config"
  part_name = "selinux"
  relative_install_dir = "selinux/"
}

ohos_prebuilt_etc("file_contexts") {
  source = "$SELINUX_ROOT_DIR/sepolicy/file_contexts"
  part_name = "selinux"

  # FIXME 此处不应该改变 file_contexts 的约定路径！
  # 因为 OpenHarmony 的 e2fsdroid 无法支持五级系统目录，所以在此作出规避，
  # 但是很显然这是不应当的。
  #relative_install_dir = "selinux/targeted/contexts/files/"
  relative_install_di = "selinux/targeted/contexts/"
}
